<resources>
    <string name="app_name">DICE</string>
    <string name="dice">DICE</string>
    <string name="a_minimalistic_dice_roll_app">A minimalistic dice roll app</string>
    <string name="get_started">get started</string>
    <string name="dice1" translatable="false">Dice1</string>
    <string name="dice2" translatable="false">Dice2</string>
    <string name="roll">Roll</string>
    <string name="about">About</string>
    <string name="rate_us">Rate us</string>
    <string name="share_bug_report">Share Bug Report</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="a_simple_intuitive_minimalistic_and_ad_free_dice_roll_application" translatable="false">DICE is a minimalistic, intuitive and an ad-free dice roll application with which you can play your favorite board games.</string>
    <string name="banner" translatable="false">banner</string>
    <string name="choose_your_dice_s_board" translatable="false">Choose your dice(s) board :</string>
    <string name="one">One</string>
    <string name="diceone_imageview" translatable="false">diceOne_imageView</string>
    <string name="suitable_for_single_player_board_games" translatable="false">Suitable for single-player board games</string>
    <string name="two">Two</string>
    <string name="suitable_for_multi_player_board_games" translatable="false">Suitable for multi-player board games</string>
    <string name="three" translatable="false">Three</string>
    <string name="four" translatable="false">Four</string>
    <string name="play">Play</string>
    <string name="dicetwo_imageview" translatable="false">diceTwo_imageView</string>
    <string name="dicethree_imageview" translatable="false">diceThree_imageView</string>
    <string name="dicefour_imageview" translatable="false">diceFour_imageView</string>
    <string name="dice3" translatable="false">dice3</string>
    <string name="dice4" translatable="false">dice4</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="nos_of_dice" translatable="false">No of dice(s) on the board</string>
    <string name="developer">Developer</string>
    <string name="app">App</string>
    <string name="report_bug">Report Bug</string>
    <string name="report_bugs_or_request_few_features">Report bugs or request few features</string>
    <string name="new_try_to_enter_pin">New try to enter PIN</string>
    <string name="star_dice">Star DICE</string>
    <string name="if_you_like_dice_star_it_on_its_github_repository">If you like DICE, star it on its GitHub repository</string>
    <string name="support_development">Support Development</string>
    <string name="if_you_really_like_dice_consider_supporting_its_development">If you really like DICE, consider supporting its development</string>
    <string name="bluetooth_switch">Bluetooth Switch</string>
    <string name="change_pin_button_caption">Change PIN</string>
    <string name="role_radio_buttons_caption">Set role:</string>
    <string name="master_radio_button_caption">Master</string>
    <string name="slave_radio_button_caption">Slave</string>
    <string name="connected_device_hint">Connected device name</string>
    <string name="check_connection_button_caption">Check connection</string>
    <string name="launch_master_button_caption">To three buttons mode</string>
    <string name="set_role_of_device">Set role</string>
    <string name="turn_on_bluetooth">Turn on Bluetooth</string>
    <string name="turn_off_bluetooth">Turn off Bluetooth</string>
    <string name="launch_slave_button_caption">To game board</string>
    <string name="increment_button_caption" translatable="false">+</string>
    <string name="commit_button_caption">Commit</string>
    <string name="decrement_button_caption" translatable="false">-</string>
    <string name="start_server_master">Start sending messages</string>
    <string name="stop_server_master">Stop sending messages</string>
    <string name="start_server_slave">Start receiving messages</string>
    <string name="stop_server_slave">Stop receiving messages</string>
    <string name="paired_devices_list_caption">Paired devices</string>
    <string name="scanned_devices_list_caption">Scanned devices</string>
    <string name="cancel_button_caption">Cancel</string>
    <string name="select_device_btn_text">Select device</string>
    <string name="clear_device_button_caption">Clear selected</string>
    <string name="set_connected_device">Set connected device</string>
    <string name="commit_button_sent">Sent</string>
    <string name="current_pin_caption_text">Current PIN</string>
    <string name="new_pin_caption_text">New PIN</string>
    <string name="confirmation_caption_text" >Confirmation</string>
    <string name="save_new_pin_button_caption">Save</string>
    <string name="cancel_change_button_caption">Cancel</string>
    <string name="confirmation_is_failed">Incorrect confirmation</string>
    <string name="enter_confirmation">Enter confirmation of PIN</string>
    <string name="pin_is_not_changed">New PIN must not be the same as current</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="incorrect_current_pin">Incorrect current PIN</string>
    <string name="enter_current_pin">Enter current PIN</string>
    <string name="new_pin_is_set">New PIN is set</string>
    <string name="pin_annotation">Four digits code, digits from 1 to 6</string>
</resources>