<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.voborodin.f2dice.viewModel.F2DiceViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/root_layout_of_secret"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/change_pin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_pin_button_caption" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/switch_bt_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/turn_off_bluetooth" />
        </LinearLayout>

        <TextView
            android:id="@+id/role_caption"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:labelFor="@id/role_radio_group"
            android:text="@string/role_radio_buttons_caption"
            android:textColor="#546E7A" />

        <RadioGroup
            android:id="@+id/role_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/master_radio_button"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/master_radio_button_caption" />

            <RadioButton
                android:id="@+id/slave_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/slave_radio_button_caption" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/role_master_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <EditText
                android:id="@+id/slave_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:hint="@string/connected_device_hint"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/select_device_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/select_device_btn_text"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/clear_connected_device_button"
                    style="?android:attr/buttonBarNegativeButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/clear_device_button_caption"
                    android:textColor="#000000" />
            </LinearLayout>

            <Button
                android:id="@+id/start_sending_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_server_master" />

            <Button
                android:id="@+id/launch_button_master"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launch_master_button_caption" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/role_slave_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <Button
                android:id="@+id/start_receiving_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_server_slave" />

            <Button
                android:id="@+id/launchButton_slave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launch_slave_button_caption" />
        </LinearLayout>

    </LinearLayout>
</layout>